# callback_scheduler

./: CMakeLists.txt  README.md
include/: callback_scheduler.hpp
include/eager_cancellation/: callback_scheduler.hpp
include/lazy_canellation/: callback_scheduler.hpp
tests/: CMakeLists.txt  callback_scheduler_test.cpp
